--- a/recipes/quick-pickle-cucumbers.html
+++ b/recipes/quick-pickle-cucumbers.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Pickled Cucumbers</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <h1>Quick Pickled Cucumbers</h1>
 
-    <img src="../recipe-images/quick-pickle-cuke.jpg" alt="Image of spicy pickles">
+    <img class="pickle" src="../recipe-images/quick-pickle-cuke.jpg" alt="Image of spicy pickles">
 
     <h3>Description</h3>
 
