--- a/recipes/sweet-and-sour-pork.html
+++ b/recipes/sweet-and-sour-pork.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet and Sour Pork</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <h1>Sweet and Sour Pork</h1>
-    <img src="../recipe-images/sweet-and-sour-pork.jpg" alt="Image of Sweet and Sour Pork">
+    <img class="pickle" src="../recipe-images/sweet-and-sour-pork.jpg" alt="Image of Sweet and Sour Pork">
     <h3>Description</h3>
     <p>
         This unbreaded take on a take-out classic is lighter and saucier. The addition of pineapple amplifies the sweet and sour flavors of the sauce.
