--- a/recipes/texas-brownies.html
+++ b/recipes/texas-brownies.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Texas Brownies</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 
 <body>
     <h1>Texas Brownies</h1>
-    <img src="../recipe-images/texas-brownies.jpg" alt="Texas Brownies Photo">
+    <img class="pickle" src="../recipe-images/texas-brownies.jpg" alt="Texas Brownies Photo">
     <h3>Description</h3>
     <p>
         These brownies are soft and cake-like with a thin chocolate glaze.
