Add Classes to Elements For CSS

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookingwine's Recipe Book</title>
+    <link rel="stylesheet" href="styles.css" />
+
 </head>
 
 <body>
 
   <h1>Odin Recipes</h1>  
 
-  <ul>
+  <ul class="list">
   <li><a href="../odin-recipes/recipes/texas-brownies.html">Texas Brownies</a></li>
   <li><a href="../odin-recipes/recipes/sweet-and-sour-pork.html">Sweet and Sour Pork</a></li>
   <li><a href="../odin-recipes/recipes/quick-pickle-cucumbers.html">Quick Pickled Cucumbers</a></li>
